--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">JAGUAR2</string>
+    <string name="app_name">Jaguar</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
     <string name="title_activity_maps">Map</string>
     <string name="title_activity_main2">Main2Activity</string>
@@ -9,4 +9,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="whats_jaguar">¿Qué es Jaguar?</string>
+    <string name="how_does_it_work">Para finalizar...</string>
+    <string name="slider_descripcion_1">Jaguar es una aplicacion con la finalidad de que todas las personas puedan vivir las experiencias de visitar los lugares del mundo mediante audios grabados.</string>
+    <string name="slider_descripcion_2">Jaguar necesitara unos permisos para poder utilizarse con toda su funcinalidad.</string>
 </resources>
